--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tm11/mmgeo",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A comprehensive package providing states, districts, and townships data for Myanmar in both English and Myanmar languages.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "keywords": [
     "Myanmar",
@@ -20,12 +21,12 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tunmin11/Myanmar-States-Districts-Townships-JSON.git"
+    "url": "git+https://github.com/tunmin11/mmgeo"
   },
   "bugs": {
-    "url": "https://github.com/tunmin11/Myanmar-States-Districts-Townships-JSON/issues"
+    "url": "https://github.com/tunmin11/mmgeo/issues"
   },
-  "homepage": "https://github.com/tunmin11/Myanmar-States-Districts-Townships-JSON#readme",
+  "homepage": "https://github.com/tunmin11/mmgeo",
   "dependencies": {
     "global": "^4.4.0"
   },
@@ -34,6 +35,6 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.3"
   }
 }
