--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
-    "compilerOptions": {
-        "module": "CommonJS",
-        "target": "ES6",
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "baseUrl": "./",
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "strict": true,
-        "declaration": true, 
-        "declarationMap": true,
-
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist", "test", "**/*.test.ts", "**/*.spec.ts"]
-  }
-  
+  "compilerOptions": {
+    "module": "CommonJS",
+    "target": "ES6",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "baseUrl": "./",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "declaration": true,
+    "declarationMap": true,
+    "lib": ["es2021", "dom"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test", "**/*.test.ts", "**/*.spec.ts"]
+}
